# CardStack

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  THIRD_PARTY_NOTICES.md  vcpkg.json
.github/workflows/: ci.yml  release.yml
docs/: building-qt-from-source.md
docs/help/: cardstack-help.md
docs/testing/: automated-gui-strategy.md  dialog-visual-audit.md  manual-gui-acceptance.md  report-preview-visual-audit.md  winevdm-legacy-oracle.md
scripts/: bootstrap_winevdm_pr.ps1  build-cardstack-vs2022.ps1  build-cardstack-windows.ps1  build-qt6-windows.ps1  capture-cardstack-window-geometry.ps1  create_winevdm_edge_fixtures.ps1  create_winevdm_interchange_fixtures.ps1  deploy-cardstack-windows.cmake  generate-visual-galleries-windows.ps1  install-qt6-translations-windows.ps1  validate_winevdm_golden_fixtures.ps1  winevdm_buttonfile_oracle.ps1  winevdm_buttonfile_oracle.scenarios.json  winevdm_legacy_manifest.json
src/app/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  app_icon.rc  cardstack_app.qrc  main.cpp
src/app/assets/help/: index.html
src/core/: BuiltInReportTemplates.cpp  BuiltInReportTemplates.h  CMakeLists.txt  CardRecord.cpp  CardRecord.h  CardTemplateLayout.h  Deck.cpp  Deck.h  DeckMerge.cpp  DeckMerge.h  DeckTemplate.cpp  DeckTemplate.h  DelimitedText.cpp  DelimitedText.h  FieldDefinition.cpp  FieldDefinition.h  ImportExportProfile.h  PhoneCallLog.cpp  PhoneCallLog.h  ReportDefinition.cpp  ReportDefinition.h
src/legacy/btrieve/: BtrieveAuditReader.cpp  BtrieveAuditReader.h  CMakeLists.txt
src/legacy/btrieve_filesaver/: BtrieveFileSaverReader.cpp  BtrieveFileSaverReader.h  CMakeLists.txt
src/legacy/legacy_deck/: CMakeLists.txt  LegacyDeckAppearanceParser.h  LegacyDeckReader.cpp  LegacyDeckReader.h  LegacyInterchangeReader.cpp  LegacyInterchangeReader.h  LegacyOemCodec.h  LegacyReportReader.cpp  LegacyReportReader.h  LegacyTemplateLayoutParser.h
src/storage/sqlite/: CMakeLists.txt  SQLiteDeckRepository.cpp  SQLiteDeckRepository.h  SQLiteDeckStore.cpp  SQLiteDeckStore.h  SQLitePackageStore.cpp  SQLitePackageStore.h
src/ui/widgets/: CMakeLists.txt  CardDetailPanel.cpp  CardDetailPanel.h  CardTableModel.cpp  CardTableModel.h  DeckSystemColors.h  DeckWorkspace.cpp  DeckWorkspace.h  PhoneticSearch.cpp  PhoneticSearch.h  ReportDesignerWidget.cpp  ReportDesignerWidget.h  ReportPreviewDialog.cpp  ReportPreviewDialog.h  ReportPreviewRenderer.cpp  ReportPreviewRenderer.h  ReportPrintEngine.cpp  ReportPrintEngine.h  ReportStyleCatalog.h  TemplateDesignerWidget.cpp  TemplateDesignerWidget.h  UiBuilder.cpp  UiBuilder.h  UiIds.h  UiResourceData.cpp  UiResourceData.h
tests/: CMakeLists.txt  CardStackTestSuite.cpp  RunQtTest.cmake
tests/app/: CMakeLists.txt  MainWindowActionTests.cpp  MainWindowWorkflowTests.cpp
tests/core/: CMakeLists.txt  DeckMergeTests.cpp  DeckTemplateTests.cpp  DelimitedTextTests.cpp  PhoneCallLogTests.cpp
tests/fixtures/legacy/winevdm/: EXCRD.CRD  EXDBF.DBF  EXTN.TN  EXWP.WP  PWTN.TN  README.md  crypt.BTN  damaged_truncated.BTN  many_fields.BTN  max_lengths.BTN  notes_heavy.BTN  oem_text.BTN  pwonly.BTN  reports.RPT  security_cycle.BTN  unusual_index.BTN
tests/legacy/: CMakeLists.txt  LegacyDeckReaderTests.cpp  LegacyInterchangeReaderTests.cpp  LegacyReportReaderTests.cpp
tests/legacy/btrieve/: BtrieveAuditReaderTests.cpp  CMakeLists.txt
tests/storage/: CMakeLists.txt  SQLiteDeckStoreTests.cpp  SQLitePackageStoreTests.cpp
tests/support/: ModalDialogDriver.h  VisualTestSupport.cpp  VisualTestSupport.h
tests/widgets/: CMakeLists.txt  DeckWorkspaceTests.cpp  PhoneticSearchTests.cpp  ReportDesignerWidgetTests.cpp  ReportPreviewRendererTests.cpp  TemplateDesignerWidgetTests.cpp  UiBuilderTests.cpp
